--- a/FIEK Portal/Base.lproj/Main.storyboard
+++ b/FIEK Portal/Base.lproj/Main.storyboard
@@ -262,7 +262,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9WG-po-CxZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4592.753623188406" y="417.39130434782612"/>
+            <point key="canvasLocation" x="4175" y="102"/>
         </scene>
         <!--S T U D E N T E T-->
         <scene sceneID="11s-FO-zkb">
@@ -433,7 +433,126 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Egp-s7-gQq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3431.884057971015" y="-292.66304347826087"/>
+            <point key="canvasLocation" x="3490" y="-713"/>
+        </scene>
+        <!--B O N U S E T-->
+        <scene sceneID="Z3F-Yq-ymE">
+            <objects>
+                <viewController id="n4n-ih-7eJ" customClass="BonusViewController" customModule="FIEK_Portal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="EzS-FR-jjx">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="grouped" separatorStyle="singleLineEtched" rowHeight="96" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="djW-fg-hXA">
+                                <rect key="frame" x="30" y="74" width="354" height="583"/>
+                                <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="bonusCell" rowHeight="96" id="OxM-dr-Vnu" customClass="BonusTableCell" customModule="FIEK_Portal" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="55.333332061767578" width="354" height="96"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OxM-dr-Vnu" id="jSl-B7-JOc">
+                                            <rect key="frame" x="0.0" y="0.0" width="354" height="96"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SZd-Y1-i3L">
+                                                    <rect key="frame" x="0.0" y="0.0" width="354" height="96"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BONUS!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F5A-Be-DXG">
+                                                            <rect key="frame" x="134.33333333333334" y="8" width="85.333333333333343" height="29"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="29" id="12p-Wf-6xA"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="21"/>
+                                                            <color key="textColor" name="Secondary Color"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+5" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kDY-W9-iky">
+                                                            <rect key="frame" x="286" y="0.0" width="60" height="44"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="44" id="Tf7-O5-xKm"/>
+                                                                <constraint firstAttribute="width" constant="60" id="vNj-Hu-zej"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="32"/>
+                                                            <color key="textColor" systemColor="systemGreenColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="21" translatesAutoresizingMaskIntoConstraints="NO" id="ws4-Ao-2Ux">
+                                                            <rect key="frame" x="8" y="52" width="338" height="24"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filan Fisteku" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x9T-Uv-wRR">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="24"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="24" id="1ub-Xq-WPT"/>
+                                                                        <constraint firstAttribute="width" constant="128" id="yQn-bp-Ofo"/>
+                                                                    </constraints>
+                                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                                                    <color key="textColor" name="Secondary Color"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Computer Architecture" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8NF-FJ-j4C">
+                                                                    <rect key="frame" x="149" y="0.0" width="189" height="24"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="189" id="LK8-H5-BRd"/>
+                                                                        <constraint firstAttribute="height" constant="24" id="Ran-Pl-vRK"/>
+                                                                    </constraints>
+                                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                                                    <color key="textColor" name="Secondary Color"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.75945576579554119" green="0.88067453561534537" blue="1" alpha="0.51389194542253513" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="F5A-Be-DXG" firstAttribute="top" secondItem="SZd-Y1-i3L" secondAttribute="top" constant="8" id="1Uc-TP-vgV"/>
+                                                        <constraint firstItem="F5A-Be-DXG" firstAttribute="centerX" secondItem="SZd-Y1-i3L" secondAttribute="centerX" id="HNw-tf-eb5"/>
+                                                        <constraint firstItem="ws4-Ao-2Ux" firstAttribute="centerX" secondItem="SZd-Y1-i3L" secondAttribute="centerX" id="JY2-sp-sLx"/>
+                                                        <constraint firstItem="kDY-W9-iky" firstAttribute="top" secondItem="SZd-Y1-i3L" secondAttribute="top" id="Wgi-Ed-TP4"/>
+                                                        <constraint firstItem="ws4-Ao-2Ux" firstAttribute="top" secondItem="F5A-Be-DXG" secondAttribute="bottom" constant="15" id="kw1-r2-5E0"/>
+                                                        <constraint firstAttribute="trailing" secondItem="kDY-W9-iky" secondAttribute="trailing" constant="8" id="o37-5c-yyo"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="SZd-Y1-i3L" secondAttribute="trailing" id="8VK-X8-eh4"/>
+                                                <constraint firstItem="SZd-Y1-i3L" firstAttribute="top" secondItem="jSl-B7-JOc" secondAttribute="top" id="JDN-Gw-ba0"/>
+                                                <constraint firstItem="SZd-Y1-i3L" firstAttribute="leading" secondItem="jSl-B7-JOc" secondAttribute="leading" id="dCJ-4X-uuL"/>
+                                                <constraint firstAttribute="bottom" secondItem="SZd-Y1-i3L" secondAttribute="bottom" id="iAw-7x-Li1"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="containerView" destination="SZd-Y1-i3L" id="acn-El-WFc"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="n4n-ih-7eJ" id="7We-SK-yKG"/>
+                                    <outlet property="delegate" destination="n4n-ih-7eJ" id="Td9-8R-nX7"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="d5V-Lp-KJx"/>
+                        <color key="backgroundColor" name="Primary Color"/>
+                        <constraints>
+                            <constraint firstItem="d5V-Lp-KJx" firstAttribute="trailing" secondItem="djW-fg-hXA" secondAttribute="trailing" constant="30" id="6eW-oK-gfq"/>
+                            <constraint firstItem="djW-fg-hXA" firstAttribute="top" secondItem="d5V-Lp-KJx" secondAttribute="top" constant="30" id="Jk2-dh-EV5"/>
+                            <constraint firstItem="d5V-Lp-KJx" firstAttribute="bottom" secondItem="djW-fg-hXA" secondAttribute="bottom" constant="30" id="QfC-ra-fLF"/>
+                            <constraint firstItem="djW-fg-hXA" firstAttribute="leading" secondItem="d5V-Lp-KJx" secondAttribute="leading" constant="30" id="VhF-oe-cbh"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="B O N U S E T" id="0aT-dX-kWw">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Rsu-zQ-GWE">
+                            <color key="tintColor" name="Icon Color"/>
+                            <connections>
+                                <action selector="didTapLogin:" destination="n4n-ih-7eJ" id="Xck-a8-yxo"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cui-V1-TRm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4397.1014492753629" y="1016.5760869565219"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Cyh-kP-WrW">
@@ -449,6 +568,7 @@
                     <connections>
                         <segue destination="ceA-Uu-Jq8" kind="relationship" relationship="viewControllers" id="n1d-Im-7HC"/>
                         <segue destination="Dfi-ta-wvS" kind="relationship" relationship="viewControllers" id="yHX-rd-DPV"/>
+                        <segue destination="SOs-6U-4pd" kind="relationship" relationship="viewControllers" id="ygu-FG-v1m"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N3w-rf-HZm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -477,7 +597,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yrw-60-fhM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2524.6376811594205" y="-292.66304347826087"/>
+            <point key="canvasLocation" x="2664" y="-713"/>
         </scene>
         <!--Ballina-->
         <scene sceneID="4pt-jA-B3G">
@@ -501,7 +621,31 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fM8-K9-dTi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3685.507246376812" y="417.39130434782612"/>
+            <point key="canvasLocation" x="3280" y="104"/>
+        </scene>
+        <!--Bonuset-->
+        <scene sceneID="cVb-tt-qst">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SOs-6U-4pd" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Bonuset" image="square.and.pencil" catalog="system" id="aQS-Ak-eWh"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="1aj-lF-sph">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" name="Primary Color"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="14"/>
+                            <color key="textColor" name="Secondary Color"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="n4n-ih-7eJ" kind="relationship" relationship="rootViewController" id="2Jw-FJ-PqP"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KZh-Yn-gSR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3489.8550724637685" y="1016.5760869565219"/>
         </scene>
     </scenes>
     <designables>
@@ -520,6 +664,7 @@
         <image name="gearshape" catalog="system" width="128" height="121"/>
         <image name="house" catalog="system" width="128" height="106"/>
         <image name="list.dash" catalog="system" width="128" height="85"/>
+        <image name="square.and.pencil" catalog="system" width="128" height="115"/>
         <namedColor name="Icon Color">
             <color red="0.14117647058823529" green="0.23137254901960785" blue="0.41960784313725491" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
